--- a/alura-geek/package.json
+++ b/alura-geek/package.json
@@ -1,6 +1,7 @@
 {
   "name": "alura-geek",
   "version": "0.1.0",
+  "author": "Alan <alan.lira08@gmail.com>",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -13,7 +14,6 @@
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
-  "author": "Alan",
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
@@ -23,9 +23,12 @@
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-airbnb": "^6.0.0",
+    "babel-eslint": "^10.1.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-vue": "^8.0.3",
+    "eslint-plugin-vue": "^8.5.0",
     "eslint-plugin-vuejs-accessibility": "^1.1.0"
   }
 }
