--- a/API-AluraGeek/api/config/config.json
+++ b/API-AluraGeek/api/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": null,
+    "password": "password",
     "database": "alura_geek",
     "host": "127.0.0.1",
     "dialect": "mysql"
@@ -11,7 +11,8 @@
     "password": null,
     "database": "database_test",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "logging": false
   },
   "production": {
     "username": "root",
