--- a/ymls/docker-compose.yml
+++ b/ymls/docker-compose.yml
@@ -1,5 +1,5 @@
 version: "3.9"
-service:
+services:
   alurageek:
     build:
       dockerfile: dockerfile
@@ -13,6 +13,8 @@ service:
     ports:
       - "3030:3030"
       - "8080:8080"
+    stdin_open: true
+    tty: true
     volumes:
       - ../alura-geek/:/home/node/app/projeto
       - ../alura-geek/package-lock.json:/home/node/app/package-lock.json
@@ -27,13 +29,15 @@ service:
       context: ../API-AluraGeek/
     image: api-alurageek:1.0
     container_name: api-alurageek
-    restart: always
+    restart: unless-stopped
     working_dir: /home/node/app/projeto
     networks:
       - alurageek
     ports:
       - "3000:3000"
       - "8000:8000"
+    stdin_open: true
+    tty: true
     volumes:
       - ../API-AluraGeek/:/home/node/app/projeto
       - ../API-AluraGeek/package-lock.json:/home/node/app/package-lock.json
@@ -45,12 +49,11 @@ service:
     image: mysql:8.0.28-oracle
     container_name: mysql-alurageek
     environment:
-      MYSQL_ROOT_PASSWORD: walter
+      MYSQL_ROOT_PASSWORD: "123456"
       MYSQL_DATABASE: alura_geek
-      MYSQL_USER: root
-      MYSQL_PASSWORD: walter
     ports:
       - "3306:3306"
+    restart: unless-stopped
     volumes:
       - mysql:/var/lib/mysql
       - mysql_config:/etc/mysql
@@ -58,7 +61,7 @@ service:
       - alurageek
 
 networks:
-  api-sequelize:
+  alurageek:
     driver: bridge
 
 volumes:
