--- a/API-AluraGeek/api/config/config.json
+++ b/API-AluraGeek/api/config/config.json
@@ -1,9 +1,9 @@
 {
   "development": {
-    "username": "root",
-    "password": null,
+    "username": "Node",
+    "password": "123456",
     "database": "alura_geek",
-    "host": "127.0.0.1",
+    "host": "mysql-alurageek",
     "dialect": "mysql"
   },
   "test": {
