--- a/API-AluraGeek/dockerfile
+++ b/API-AluraGeek/dockerfile
@@ -6,5 +6,6 @@ ENV PORT=$PORT
 EXPOSE $PORT
 COPY package.json package-lock.json* ./
 RUN npm install --no-optional && npm cache clean --force
-WORKDIR /home/node/app/projeto
+COPY . .
+WORKDIR /home/node/app/api
 CMD npm run start
