--- a/ymls/docker-compose.yml
+++ b/ymls/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     restart: always
     working_dir: /home/node/app/projeto
     networks:
-      - alurageek
+      - frontend
     ports:
       - "3030:3030"
       - "8080:8080"
@@ -35,18 +35,20 @@ services:
     image: api-alurageek:1.0
     container_name: api-alurageek
     restart: unless-stopped
-    working_dir: /home/node/app/projeto
+    working_dir: /home/node/app/api
     networks:
-      - alurageek
+      - frontend
+      - backend
     ports:
       - "3000:3000"
       - "8000:8000"
     stdin_open: true
     tty: true
     volumes:
-      - ../API-AluraGeek/:/home/node/app/projeto
+      - ../API-AluraGeek/api:/home/node/app/api
       - ../API-AluraGeek/package-lock.json:/home/node/app/package-lock.json
       - ../API-AluraGeek/package.json:/home/node/app/package.json
+      - ../API-AluraGeek/.sequelizerc:/home/node/app/.sequelizerc
     depends_on:
       - "mysql"
 
@@ -54,22 +56,21 @@ services:
     image: mysql:8.0.28-oracle
     container_name: mysql-alurageek
     environment:
-      MYSQL_ROOT_PASSWORD: "123456"
+      MYSQL_ROOT_PASSWORD: 123456
       MYSQL_DATABASE: alura_geek
-      MYSQL_USER: root
+      MYSQL_USER: Node
+      MYSQL_PASSWORD: 123456
     ports:
       - "3306:3306"
-    restart: unless-stopped
     volumes:
-      - mysql:/var/lib/mysql
-      - mysql_config:/etc/mysql
+      - ../mysql/log:/var/log/mysql
+      - ../mysql/data:/var/lib/mysql
+      - ../mysql/conf:/etc/MySQL/conf.d.
     networks:
-      - alurageek
+      - backend
 
 networks:
-  alurageek:
+  frontend:
     driver: bridge
-
-volumes:
-  mysql:
-  mysql_config:
+  backend:
+    driver: bridge
