foi reestruturado a api e alterado o banco do mysql para o mongoDB

--- a/API-AluraGeek/dockerfile
+++ b/API-AluraGeek/dockerfile
@@ -1,11 +1,10 @@
 FROM node:17-slim
 LABEL maintainer "Alan Lira <alan.lira08@gmail.com>"
-WORKDIR /home/node/app
+WORKDIR /home/node/api
 ARG PORT=8000
 ENV PORT=$PORT
 EXPOSE $PORT
 COPY package.json package-lock.json* ./
 RUN npm install --no-optional && npm cache clean --force
-COPY . .
-WORKDIR /home/node/app/api
-CMD npm run start
+WORKDIR /home/node/api/src
+CMD npm run dev
