--- a/alura-geek/package.json
+++ b/alura-geek/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "author": "Alan <alan.lira08@gmail.com>",
   "private": true,
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
+  },
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
